[package]
name = "harmony"
default-run = "harmony"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
actix-web = "4.0.0"
hyper = { version = "0.14", features = ["full", "server"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "harmony"
path = "src/main.rs"

[[bin]]
name = "server1"
path = "src/server1.rs"

[[bin]]
name = "server2"
path = "src/server2.rs"

[[bin]]
name = "server3"
path = "src/server3.rs"
